--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,11 @@
     height: 100%;
 }
 
+.content h1 {
+    color: #006998;
+    animation: movit 1.5s linear infinite;
+}
+
 .generate-array {
     margin: 2em;
     display: flex;
@@ -36,4 +41,27 @@
 .btn:hover {
     background-color: #0074c4;
     color: #ffffff;
+}
+
+.result {
+    display: flex;
+    color: #ffffff;
+}
+
+.result div {
+    margin: 5px;
+    color: #4DA167;
+    font-weight: 900;
+}
+
+@keyframes movit{
+    0%{
+        transform: translateY(0);
+    }
+    50%{
+        transform: translateY(10px);
+    }
+    100%{
+        transform: translateY(0);
+    }
 }
